tests/neg/i24371.scala
class M extends caps.Mutable:
  update def foo = () // error // error


